storage and sources fixed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
     <section class="create-new-book flex-col">
-        <button class="btn-exit" onclick="onCloseSubmitBookMenu()">X</button>
+        <button class="btn-exit" onclick="onToggleAddBookMenu(false)">X</button>
         <h3>Submit new book</h3>
 
         <label for="book-name">Book Name</label>
@@ -67,10 +67,10 @@
 
 
 
-    <script src="/js/sevices/utils.service.js"></script>
-    <script src="/js/sevices/storage.service.js"></script>
-    <script src="/js/sevices/books.service.js"></script>
-    <script src="/js/books.controller.js"></script>
+    <script src="js/sevices/utils.service.js"></script>
+    <script src="js/sevices/storage.service.js"></script>
+    <script src="js/sevices/books.service.js"></script>
+    <script src="js/books.controller.js"></script>
 </body>
 
 </html>
